--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
    <head>
     <meta charset = "UTF-8">
-    <title>TaxFactory Head</title>
+    <title>TaxFactory Solutions</title>
     <link rel="stylesheet" href="./res/js/bootstrap-4.0.0-dist/css/bootstrap.min.css">
     <!-- Custom styles for this template -->
     <link href="./res/css/fontawesome-free-5.0.6/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet">
