Updates for demo.

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
         <li>
           <a href="#" onclick="return loadspa('spa4')"><span class="nav-label"><i class="fas fa-user"></i> Add Employee</span></a>
           <a href="#" onclick="return loadspa('spa2')"><span class="nav-label"><i class="far fa-calendar-alt"></i> Employee Grid</span></a>
+          <!-- <a href="#" onclick="return loadspa('spa5')"><span class="nav-label"><i class="fas fa-user"></i> Calculate Taxes</span></a> -->
         </li>
       </ul>
     </nav>
@@ -175,7 +176,10 @@
             renderApplication('_tffactory_id','employeegrid');
           }else if(spa=='spa4'){
             renderApplication('_tffactory_id','addemployee');
-          }else{
+          }else if(spa=='spa5'){
+            renderApplication('_tffactory_id','calculateTaxes');
+          }
+          else{
             renderWelcomePage('_tffactory_id');
           }
       }
