--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <nav class="navbar navbar-inverse navbar-global navbar-fixed-top">
           <div class="container-fluid">
             <div class="navbar-header">
-              <a class="navbar-brand" href="#" onclick="loadspa();"><i class="fas fa-home"></i>  Application Module UI</a>
+              <a class="navbar-brand" href="#" onclick="loadspa();"><i class="fas fa-home"></i>  TF Application Test UI</a>
             </div>
           </div>
         </nav>
