Updated for Server changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
    <head>
     <meta charset = "UTF-8">
-    <title>Tax Factory Solutions</title>
+    <title>TF Application Test UI</title>
     <link rel="stylesheet" href="./res/js/bootstrap-4.0.0-dist/css/bootstrap.min.css">
     <!-- Custom styles for this template -->
     <link href="./res/css/fontawesome-free-5.0.6/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet">
@@ -146,7 +146,7 @@
       <nav class="navbar navbar-inverse navbar-global navbar-fixed-top">
           <div class="container-fluid">
             <div class="navbar-header">
-              <a class="navbar-brand" href="#" onclick="loadspa();"><i class="fas fa-home"></i>  Application Module UI</a>
+              <a class="navbar-brand" href="#" onclick="loadspa();"><i class="fas fa-home"></i>  TF Application Test UI</a>
             </div>
           </div>
         </nav>
