updated original label

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <ul class="navbar-primary-menu">
         <li>
           <a href="#" onclick="return loadspa('spa4')"><span class="nav-label"><i class="fas fa-user"></i> Add Employee</span></a>
-          <a href="#" onclick="return loadspa('spa2')"><span class="nav-label"><i class="far fa-calendar-alt"></i> Active Employee</span></a>
+          <a href="#" onclick="return loadspa('spa2')"><span class="nav-label"><i class="far fa-calendar-alt"></i> Employee Grid</span></a>
           <!-- <a href="#" onclick="return loadspa('spa5')"><span class="nav-label"><i class="fas fa-user"></i> Calculate Taxes</span></a> -->
         </li>
       </ul>
